# xwmb

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml
ci/: environment.yml
conventions/: MOM6.yaml
data/: README.md
docs/: environment.yml
docs/source/: api.rst  conf.py  contrib.rst  examples.rst  index.rst  install.rst  objective.rst
docs/source/api/: xwmb.budget.rst  xwmb.rst  xwmb.version.rst
docs/source/examples/: MOM6_water_mass_budgets.ipynb
examples/: 0_xwmb_walkthrough.ipynb  0a_Baltic_wmb_compute.ipynb  0a_Baltic_wmb_compute_xwmt.ipynb  0a_create_test_dataset.ipynb  AntarcticShelf_wmb.ipynb  Baltic_example.ipynb  Baltic_example_wmb.ipynb  Balticwmt_6hourly_near-truth.ipynb  BrazilBasin_wmb_OM4p5.ipynb  COSIMA_talk.ipynb  MOM6_diagtable  MOM6_num_mixing.yaml  MOM6_water_mass_budgets.ipynb  NCARtalk_AntarcticShelf.ipynb  compare_Baltic_wmb.ipynb  diagnostic_remapping_inconsistency.ipynb  example_dataset_grids.py  example_xwmb.ipynb  load_example_model_grid.py  loading.py  save_Baltic_firstday.ipynb
paper/: NOAAFY24_MAPP_diagnostic_sensitivity_matrix.ipynb  budget_illustrations.ipynb  diagnostic_sensitivity_matrix.ipynb  plot_processed_budgets.ipynb  preprocess_budgets.ipynb  preprocess_heat_budgets.ipynb  preprocess_salt_budgets.ipynb  wmb_permutations.py
paper/data/: README.md
xwmb/: __init__.py  budget.py  plotting.py  version.py
xwmb/pottemp/: dMdt.py  psi.py  wmb.py  wmt.py
xwmb/tests/: test_budget.py
xwmb/theta/: __init__.py  dMdt.py  psi.py  wmb.py  wmt.py
(+4 files in other folders)
